[gd_scene load_steps=9 format=3 uid="uid://bbywgfea0xs8a"]

[ext_resource type="Script" uid="uid://1et8e6ncl37i" path="res://Scripts/menu.gd" id="1_ouk20"]
[ext_resource type="Theme" uid="uid://chgt08oxms2t" path="res://Bottom Theme.tres" id="2_mae5d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w4oxd"]
bg_color = Color(0, 0, 0, 0.48235294)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n6wdb"]
bg_color = Color(0.23123062, 0.23870072, 0.24617085, 0.7764706)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.19434926, 0.19434929, 0.19434911, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3huw"]
bg_color = Color(0.23123062, 0.23870072, 0.24617085, 0.7764706)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.19434926, 0.19434929, 0.19434911, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_280g2"]
bg_color = Color(0.23123062, 0.23870072, 0.24617085, 0.7764706)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.19434926, 0.19434929, 0.19434911, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5cw7b"]
bg_color = Color(0.23123062, 0.23870072, 0.24617085, 0.7764706)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.19434926, 0.19434929, 0.19434911, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_as1ww"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_disabled_color = Color(1, 1, 1, 1)
Button/colors/font_focus_color = Color(1, 1, 1, 1)
Button/colors/font_hover_color = Color(1, 1, 1, 1)
Button/constants/align_to_largest_stylebox = 1
Button/font_sizes/font_size = 24
Button/styles/focus = SubResource("StyleBoxFlat_n6wdb")
Button/styles/hover = SubResource("StyleBoxFlat_g3huw")
Button/styles/normal = SubResource("StyleBoxFlat_280g2")
Button/styles/pressed = SubResource("StyleBoxFlat_5cw7b")

[node name="Menu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_ouk20")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w4oxd")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
process_mode = 2
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 39
alignment = 1

[node name="Resume" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_mae5d")
theme_override_font_sizes/font_size = 52
text = "Resume"

[node name="Save" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_mae5d")
theme_override_font_sizes/font_size = 52
text = "Save"

[node name="Load" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_mae5d")
theme_override_font_sizes/font_size = 52
text = "Load"

[node name="Options" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_mae5d")
theme_override_font_sizes/font_size = 52
text = "Options"

[node name="Quit" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_mae5d")
theme_override_font_sizes/font_size = 52
text = "Quit"

[node name="TabContainer" type="TabContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
current_tab = 0
tabs_visible = false

[node name="Empty" type="Control" parent="PanelContainer/HBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="Saves" type="GridContainer" parent="PanelContainer/HBoxContainer/TabContainer"]
visible = false
layout_direction = 3
layout_mode = 2
theme_override_constants/h_separation = 100
theme_override_constants/v_separation = 144
columns = 4
metadata/_tab_index = 1

[node name="S4" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Saves"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Save Slot 4"

[node name="S3" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Saves"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Save Slot 3"

[node name="S2" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Saves"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Save Slot 2"

[node name="S1" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Saves"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
theme_override_constants/align_to_largest_stylebox = 1
text = "Save Slot 1"

[node name="S8" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Saves"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Save Slot 8"

[node name="S7" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Saves"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Save Slot 7"

[node name="S6" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Saves"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Save Slot 6"

[node name="S5" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Saves"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Save Slot 5"

[node name="S12" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Saves"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Save Slot 12"

[node name="S11" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Saves"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Save Slot 11"

[node name="S10" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Saves"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Save Slot 10"

[node name="S9" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Saves"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Save Slot 9"

[node name="Loading" type="GridContainer" parent="PanelContainer/HBoxContainer/TabContainer"]
visible = false
layout_direction = 3
layout_mode = 2
theme_override_constants/h_separation = 100
theme_override_constants/v_separation = 144
columns = 4
metadata/_tab_index = 2

[node name="L4" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Loading"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Load Save 4"

[node name="L3" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Loading"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Load Save 3"

[node name="L2" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Loading"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Load Save 2"

[node name="L1" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Loading"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Load Save 1"

[node name="L8" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Loading"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Load Save 8"

[node name="L7" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Loading"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Load Save 7"

[node name="L6" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Loading"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Load Save 6"

[node name="L5" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Loading"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Load Save 5"

[node name="L12" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Loading"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Load Save 12"

[node name="L11" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Loading"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Load Save 11"

[node name="L10" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Loading"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Load Save 10"

[node name="L9" type="Button" parent="PanelContainer/HBoxContainer/TabContainer/Loading"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme = SubResource("Theme_as1ww")
text = "Load Save 9"

[node name="Settings" type="Control" parent="PanelContainer/HBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 3

[node name="mar" type="MarginContainer" parent="PanelContainer/HBoxContainer/TabContainer/Settings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -148.0
offset_right = 148.0
offset_bottom = 115.0
grow_horizontal = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/TabContainer/Settings/mar"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Text Settings:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/TabContainer/Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -178.0
offset_top = -205.0
offset_right = 178.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 28

[node name="HBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/TabContainer/Settings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/TabContainer/Settings/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Text Delay:"

[node name="ticks" type="HSlider" parent="PanelContainer/HBoxContainer/TabContainer/Settings/VBoxContainer/HBoxContainer"]
layout_mode = 2
min_value = 0.5
max_value = 5.0
step = 0.5
value = 2.0

[node name="HBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer/TabContainer/Settings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/TabContainer/Settings/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Auto Speed Delay:"

[node name="auto" type="HSlider" parent="PanelContainer/HBoxContainer/TabContainer/Settings/VBoxContainer/HBoxContainer2"]
layout_mode = 2
min_value = 0.2
max_value = 5.0
step = 0.05
value = 1.0

[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
